# 2024.0972

./: AUTHORS  README.md
docs/: README.md
results/: Raw results.xlsx
scripts/: main.cpp
src/: CMakeLists.txt  helper_functions.cpp  helper_functions.h
